# GTest_CI

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: Math.h  main.cpp
tests/: CMakeLists.txt  my_tests.cpp
